<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    android:background="@color/white"
    tools:ignore="MissingClass">


    <!--    чтобы блое не выезжал нужно android:layout_width="0dp "-->
    <!--    указывать все тексты в sp "-->
<!--    если текст длинный, то сделать, чтобы он ограничивался 1 строкой и заканчивался троеточием-->

<!--в ConstraintLayout всегда должны быть связи с родителем-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/avatar"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/avatar"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar"
            app:layout_constraintEnd_toEndOf="@id/main_layout"
            app:layout_constraintStart_toStartOf="@id/main_layout"
            app:layout_constraintTop_toTopOf="@id/main_layout"
            app:riv_corner_radius="85dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintTop_toBottomOf="@+id/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:textSize="24sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:textAlignment="center">
        </TextView>

        <androidx.cardview.widget.CardView
            android:id="@+id/personal_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="10dp"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/info_specialty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_speciality"
                        android:textColor="@color/gray"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/specialty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/speciality"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/info_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_age"
                        android:textColor="@color/gray"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/info_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_height"
                        android:textColor="@color/gray"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/height"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personal_info">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/account_posts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/posts"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/posts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_posts"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="11sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray">
            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/account_subscriptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subscriptions"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/subscriptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_subscriptions"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="11sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray">
            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/account_followers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/followers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_followers"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--    <View-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="200dp"-->
<!--        android:layout_weight="2"-->
<!--        android:background="#F00"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:layout_editor_absoluteX="124dp"-->
<!--        tools:layout_editor_absoluteY="238dp" />-->

</ScrollView>